--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=????????
-spring.datasource.username=????
-spring.datasource.password=??????
+spring.datasource.url=jdbc:sqlserver://15.165.111.112;databaseName=AIDO_PORTAL_TS
+spring.datasource.username=eduai
+spring.datasource.password=zmffkdnem090!
+
+# Front
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
+spring.mvc.hiddenmethod.filter.enabled=true
